[Project structure] Downgraded from java 19 to java 8.